Version 1.10.5+svn:
 * Campaigns:
   * The Rise of Wesnoth:
     * Fix bug #16772: AI won't attack
 * Language and i18n:
   * Updated translations: British English, Galician, German, Latin,
     Portuguese, Portuguese (Brazil), Scottish Gaelic, Slovak
 * WML engine:
   * Fixed [disallow_end_turn] losing effect on save/reload (bug #20350)
   * Fixed [disallow_end_turn] persisting when advancing to the next scenario
     (bug #20351)
 * Miscellaneous and bug fixes:
   * Fixed a rare case where a player could exercise (very) limited control of
     another (human) player's units in a hotseat game.

Version 1.10.5:
 * Campaigns:
   * Under the Burning Suns:
     * Keep a spawned unit from disappearing on reload in scenario 6b
 * Graphics:
   * Fixed glitches caused by larger-than-hex standing units with certain frame
     image effects when image= is not explicitly specified (bug #20099)
 * Language and i18n:
   * New translation: Scottish Gaelic
   * Updated translations: Chinese (Traditional), Croatian, French, Galician,
     German, Hungarian, Italian, Latin, Polish, Portuguese (Brazil), Russian,
     Serbian, Slovak, Ukrainian
 * Whiteboard
   * Don't end turn if executing all actions in another way than using the
     "end turn" button/hotkey. (bug #19901)
   * Fixed crash when an ally executes a planned move of an unit with 2 planned
     moves. (bug #19826)
 * WML engine:
   * Image path functions again evaluated left-to-right. Fixes bug #20196.
 * Miscellaneous and bug fixes:
   * Fix OOS when dismissing a recall in a multiplayer campaign (bug #19924).
   * Fixed: Compilation with Boost 1.51.0 (Gentoo bug #440742).

Version 1.10.4:
 * Campaigns:
   * A Tale of Two Brothers:
     * Fix bug #19949: Turns left counter initially incorrect when objectives
       change and turn limit is extended
   * Son of the Black Eye:
     * Fixed bug #19686: fixed two variable checks that prevented some strings
       from being displayed in Back Home
   * Sceptre of Fire: