@@ -159,6 +159,14 @@
     default=no
 [/advanced_preference]
 
+[advanced_preference]
+    field=new_lobby
+    name= _ "Experimental multiplayer lobby"
+    description= _ "Replace the classic multiplayer lobby with a newer, experimental interface"
+    type=boolean
+    default=no
+[/advanced_preference]
+
 #ifdef __UNUSED__
 [advanced_preference]
     field=joystick_support_enabled
