@@ -5,6 +5,9 @@ Version 1.10.5+svn:
  * Language and i18n:
    * Updated translations: British English, Galician, German, Latin,
      Portuguese, Portuguese (Brazil), Scottish Gaelic, Slovak
+ * Multiplayer:
+   * Moved new lobby option in Preferences -> Multiplayer to Advanced
+     Preferences and clarified description
  * WML engine:
    * Fixed [disallow_end_turn] losing effect on save/reload (bug #20350)
    * Fixed [disallow_end_turn] persisting when advancing to the next scenario
